environments/staging/patches/update-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: morphic-community-v09
spec:
  tls:
    - hosts:
        - community.morphic-staging.com
      secretName: morphic-community-v09-tls
  rules:
    - host: community.morphic-staging.com
      http:
        paths:
          - backend:
              serviceName: morphic-community-v09
              servicePort: http
            path: /

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: morphic-community-v10
spec:
  tls:
    - hosts:
        - custom.morphic-staging.com
      secretName: morphic-community-v10-tls
  rules:
    - host: custom.morphic-staging.com
      http:
        paths:
          - backend:
              serviceName: morphic-community-v10
              servicePort: http
            path: /
